--- a/.gitignore
+++ b/.gitignore
@@ -278,3 +278,7 @@ __pycache__/
 
 ###### -- Custom Ignore Section, Make sure all files you add to the git repo are below this line  --  ######
 
+bin-release
+bin-debug
+.wing
+obj
